--- a/apps/gelt-mash/index.html
+++ b/apps/gelt-mash/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/circle-logo.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + Vue + TS</title>
+        <title>Dom Wingfield | Gelt Mash</title>
     </head>
     <body>
         <div id="app"></div>
